# agent-manager

./: .gitignore  Cargo.toml  README.md  release.ps1
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: config.rs  launcher.rs  lib.rs  models.rs  scanner.rs  skills.rs
gui/: Cargo.toml  tauri.conf.json
gui/capabilities/: default.json
gui/src/: main.rs
src/: config.rs  launcher.rs  main.rs  models.rs  scanner.rs  skills.rs
