[package]
name = "agent-manager-gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
agent-manager-core = { path = "../core" }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
webbrowser = "1"
time = { workspace = true }
